--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ac.integration</groupId>
-	<artifactId>integrationservice</artifactId>
+	<artifactId>testapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>integrationservice</name>
+	<name>testappname</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
